# sbling-trip-api

./: .gitignore  Dockerfile  README.md  build_and_deploy_docker_image.sh  build_and_push_docker_image.sh  curl.sh  ddl.sql  docker-compose.yml  generate_fake_data.ipynb  preprocess.csv  preprocess.ipynb  pyproject.toml
.github/workflows/: build_docker_image_and_push.yaml
api_python/app/: main.py
api_python/app/common/: api_response.py  configuration.py  exceptions.py  kst_time.py  phase.py  pydantic_validator.py
api_python/app/common/client/: async_context_resource.py  resources.py
api_python/app/common/config/: configuration.py  phase.py
api_python/app/common/depends/: depends.py
api_python/app/common/model/: stay_type.py  user.py
api_python/app/point/: point_router.py
api_python/app/point/model/: point_model.py
api_python/app/point/repository/: point_repository.py
api_python/app/point/service/: point_service.py
api_python/app/reservation/: reservation_router.py
api_python/app/reservation/model/: reservation_model.py
api_python/app/reservation/repository/: reservation_repository.py
api_python/app/reservation/service/: reservation_service.py
api_python/app/review/: review_router.py
api_python/app/review/model/: review_model.py
api_python/app/review/repository/: review_repository.py
api_python/app/review/service/: review_service.py
api_python/app/room/: room_router.py
api_python/app/room/model/: room_model.py
api_python/app/room/repository/: room_repository.py
api_python/app/room/service/: room_service.py
api_python/app/search/: search_router.py
api_python/app/security/: auth_router.py  cors.py  oauth_config.py
api_python/app/security/service/: security_service.py
api_python/app/stay/: stay_router.py
api_python/app/stay/model/: stay_info.py  stay_model.py
api_python/app/stay/repository/: stay_repository.py
api_python/app/stay/service/: stay_service.py
api_python/app/user/: user_router.py
api_python/app/user/model/: user_model.py
api_python/app/user/repository/: user_repository.py
api_python/app/user/service/: user_service.py
api_python/app/users/: user_router.py
api_python/app/wish/: wish_router.py
api_python/resources/: config-dev.ini  config-local.ini  config-prod.ini
data_generate/: generate_fake_data.ipynb  generate_reservation.ipynb  generate_review.ipynb  insert_data.ipynb  preprocess.csv  result.csv  room_info_generator.py
(+7 files in other folders)
