[tool.poetry]
name = "sibling-trip"
version = "0.1.0"
description = ""
authors = ["hkim <hyeon000125@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = ">=0.103.1,<0.104.0"
uvicorn = {version = "^0.23.2", extras = ["standard"]}
pandas = "^2.1.4"
xlrd = "^2.0.1"



[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
