[tool.poetry]
name = "sibling-trip"
version = "0.1.0"
description = ""
authors = ["hkim <hyeon000125@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = ">=0.103.1,<0.104.0"
uvicorn = {version = "^0.23.2", extras = ["standard"]}
pandas = "^2.1.4"
sqlalchemy = {version = "^2.0.23", extras = ["asyncio"]}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
httpx = "^0.26.0"
authlib = "^1.3.0" # Required for OAuth2 support.
itsdangerous = "^2.1.2" # Required for SessionMiddleware support.



[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
