[tool.poetry]
name = "sbling-trip-api"
version = "0.1.0"
description = ""
authors = ["hkim <hyeon000125@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = ">=0.103.1,<0.104.0"
uvicorn = {version = "^0.23.2", extras = ["standard"]}
pandas = "^2.1.4"
sqlalchemy = {version = "^2.0.23", extras = ["asyncio"]}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
httpx = "^0.26.0"
authlib = "^1.3.0" # Required for OAuth2 support.
itsdangerous = "^2.1.2" # Required for SessionMiddleware support.
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
faker = "^22.2.0"
python-multipart = "^0.0.7"



[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
asgi-lifespan = "^2.1.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.9.1"
nox = "^2023.4.22"
types-pillow = "^10.1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
